# trustdidweb-server-py

./: .dockerignore  .gitignore  README.md  index.yaml
.github/: dependabot.yaml
.github/actions/chart_releaser/: action.yaml  cr.sh  cr.yaml
.github/workflows/: chart-release.yaml  publish.yaml  release.yaml  release_chart.yaml
chart/: extra-values.yaml
charts/: Chart.yaml  my-values.yaml  values.yaml
charts/tdw-server/: Chart.yaml  dev-values.yaml  values.yaml
charts/tdw-server/templates/: _helpers.tpl  deployment.yaml  ingress.yaml
charts/templates/: Chart.yaml  _helpers.tpl
charts/templates/server/: deployment.yaml  ingress.yaml
demo/: .env.demo  README.md  demo.values.yaml  docker-compose.yml  manage
demo/frontend/: Dockerfile  config.py  main.py  requirements.txt
demo/frontend/app/: __init__.py
docker/: Dockerfile
helm/: Chart.yaml  values.yaml
helm-charts/: Chart.yaml  values.yaml
helm-charts/environments/: dev.yaml  prod.yaml  test.yaml
helm/templates/: _helpers.tpl
helm/values/: dev.yaml  prod.yaml  test.yaml
server/: .env.example  Dockerfile  app.db  config.py  main.py  pyproject.toml  requirements copy.txt  requirements.txt
server/app/: __init__.py  api.py  auth.py  db.py  dependencies.py  multibase.py  utilities.py
server/app/models/: credentials.py  di_proof.py  did_document.py  did_log.py  presentations.py  proofs.py  web_requests.py  web_schemas.py
server/app/plugins/: __init__.py  askar.py  trust_did_web.py
server/app/routers/: identifiers.py  registrations.py  resolvers.py  status_lists.py  tdw.py
(+34 files in other folders)
